so far so good. Fixed issue with title bar text and alignment of arrows. Also changed the close button graphic so that it looks more button-like

--- a/css/ceebox.css
+++ b/css/ceebox.css
@@ -34,6 +34,7 @@ html,body{height:100%;}
 	float:left;
 	padding: 2px 0 4px;
 }
+.cee_html #cee_title h2 {float:left;}
 .cee_html #cee_count {clear:none;padding-left:5px;}
 * html #cee_count { /* ie6 hack */
 	margin-top:-8px;
@@ -66,7 +67,7 @@ html,body{height:100%;}
 	height:28px;
 	float:right;
 	text-indent:-10000px;
-	margin: 0px 0 4px 0;
+	margin: 0px 0 4px 6px;
 	}
 #cee_closeBtn:hover {
 	background-position: 0px -28px;
@@ -108,7 +109,6 @@ html,body{height:100%;}
 	font-size:1em;
 	font-weight:400;
 	margin:0 0 1px;
-	float:left;
 }
 
 #cee_ajax{
